# aichallenge-2025

./: .gitignore  Dockerfile  docker_build.sh  docker_run.sh  packages.txt
aichallenge/: Makefile  publish_initialpose.py  record_rosbag.bash  run_autoware.bash  run_multiple_vehicle.bash  run_simulator.bash  start_request.bash
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/: package.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/data/: accel_map.csv
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/initial_orientation_setter/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/initial_orientation_setter/src/: initial_orientation_setter_node.cpp
aichallenge/workspace/src/aichallenge_submit/mpc_controller/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/mpc_controller/config/: mpc_controller.param.yaml
aichallenge/workspace/src/aichallenge_submit/mpc_controller/include/mpc_controller/: mpc_controller_node.hpp  mpc_osqp_solver.hpp  vehicle_model.hpp  visualization.hpp
aichallenge/workspace/src/aichallenge_submit/mpc_controller/launch/: mpc_controller.launch.xml
aichallenge/workspace/src/aichallenge_submit/mpc_controller/src/: mpc_controller_node.cpp
aichallenge/workspace/src/aichallenge_submit/mpc_controller/src/lib/: mpc_osqp_solver.cpp  vehicle_model.cpp  visualization.cpp
aichallenge/workspace/src/aichallenge_submit/mpc_controller/test/: test_mpc_controller.cpp  test_mpc_controller_node.cpp  test_mpc_osqp_solver.cpp
aichallenge/workspace/src/aichallenge_submit/simple_trajectory_generator/data/: raceline_awsim_30km_pp_new.csv  raceline_cctb_30km_wide_from_garage.csv
aichallenge/workspace/src/aichallenge_submit/vibe_coding_kit/: CMakeLists.txt  README.md  package.xml  requirements.txt
aichallenge/workspace/src/aichallenge_submit/vibe_coding_kit/launch/: vibe_coding.launch.xml
aichallenge/workspace/src/aichallenge_submit/vibe_coding_kit/scripts/: camera_controller.py  vibe_coding_node.py
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/config/: autoware.rviz
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/config/domain/: d1_bridge_config.yaml  d2_bridge_config.yaml  d3_bridge_config.yaml  d4_bridge_config.yaml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/launch/: aichallenge_system.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/launch/mode/: awsim.launch.xml  real.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/script/: route_safety_monitor.py  test.py
remote/: connect_ssh.bash  connect_zenoh.bash  zenoh-user.json5
vehicle/: Makefile  docker-compose.yml  record_rosbag.bash  zenoh.json5
