<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>initial_orientation_setter</name>
  <version>0.0.0</version>
  <description>A package to set initial pose orientation based on GNSS position and path direction</description>
  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
