<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_controller</name>
  <version>0.1.0</version>
  <description>Model Predictive Controller</description>
  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>motion_utils</depend>
  <depend>osqp</depend>
  <depend>osqp_vendor</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>autoware_auto_control_msgs</test_depend>
  <test_depend>autoware_auto_planning_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 